Add basic style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 <body>
   <header>
     <div class="container">
-      <h1>WordPress 高级主题</h1>
+      <h1>
+        <a href="index.html">WordPress 高级主题</a>
+        <small>又一个 WordPress 主题</small>
+      </h1>
       <div class="h_right">
         <form>
           <input type="text" placeholder="搜索...">
