--- a/index.html
+++ b/index.html
@@ -48,7 +48,17 @@
             <a class="button" href="#">更多</a>
           </article>
     </div>
+
+    <div class="side">
+        <div class="block">
+        <h3>Sidebar Head</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        Nam vel diam hendrerit erat fermentum aliquet sed eget arcu.</p>
+        <a class="button">More</a>
+        </div>
+     </div>
   </div>
+  
   <footer class="main-footer">
     <div class="container">
       <div class="f_left">
